--- a/package.json
+++ b/package.json
@@ -6,13 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:styles": "stylelint './**/*.{js,ts,tsx}'"
   },
   "dependencies": {
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "@fontsource/roboto": "^4.5.8",
+    "lodash": "^4.17.21",
     "next": "13.0.3",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.15.0",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-config-yandex-plus-order": "^1.0.0",
+    "stylelint-order": "^5.0.0"
   }
 }
