--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.10.14",
     "@mui/styled-engine-sc": "^5.10.14",
+    "@reduxjs/toolkit": "^1.9.0",
     "lodash": "^4.17.21",
     "next": "13.0.3",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
