--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mui/material": "^5.10.14",
     "@mui/styled-engine-sc": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.1.3",
+    "cookie": "^0.5.0",
+    "final-form": "^4.20.7",
     "lodash": "^4.17.21",
     "next": "13.0.3",
     "normalize.css": "^8.0.1",
@@ -23,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-final-form": "^6.5.9",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-yandex-plus-order": "^1.0.0",
-    "stylelint-order": "^5.0.0"
+    "stylelint-order": "^5.0.0",
+    "typescript": "4.9.3"
   }
 }
