--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
-    "cookie": "^0.5.0",
+    "cookies-js": "^1.2.3",
     "final-form": "^4.20.7",
     "lodash": "^4.17.21",
     "next": "13.0.3",
@@ -25,8 +25,8 @@
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
     "react-final-form": "^6.5.9",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
