--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "cookies-js": "^1.2.3",
     "final-form": "^4.20.7",
     "lodash": "^4.17.21",
