--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookies-js": "^1.2.3",
     "final-form": "^4.20.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.0.3",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -29,6 +30,8 @@
     "react-final-form": "^6.5.9",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
+    "react-tradingview-embed": "^3.0.6",
+    "react-vis": "^1.11.7",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
