--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "cookies-js": "^1.2.3",
     "final-form": "^4.20.7",
+    "konva": "^8.3.14",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.0.3",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
+    "react-konva": "^18.2.3",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "react-tradingview-embed": "^3.0.6",
