--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "chart.js": "^4.0.1",
     "cookies-js": "^1.2.3",
+    "faker": "^6.6.6",
     "final-form": "^4.20.7",
     "konva": "^8.3.14",
     "lodash": "^4.17.21",
@@ -26,11 +28,15 @@
     "next": "13.0.3",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "re-resizable": "^6.9.9",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-final-form": "^6.5.9",
     "react-konva": "^18.2.3",
     "react-redux": "^8.0.5",
+    "react-resizable": "^3.0.4",
     "react-toastify": "^9.1.1",
     "react-tradingview-embed": "^3.0.6",
     "react-vis": "^1.11.7",
